--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,11 +1,12 @@
 set -g default-terminal "screen-256color"
 
-# changing prefix
+# --- changing prefix ---
+
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
-# --- splitting windows --- 
+# --- spliting windows --- 
 
 unbind %
 bind | split-window -h
@@ -17,7 +18,6 @@ bind - split-window -v
 
 unbind r
 bind r source-file ~/.tmux.conf
-
 
 # --- mouse in tmux ---
 
