--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,4 +1,7 @@
-set -g default-terminal "screen-256color"
+# --- for neovim ---
+
+set -sg escape-time 10
+set-option -g focus-events on
 
 # --- changing prefix ---
 
@@ -47,3 +50,8 @@ set -g status-left ""
 
 set -g base-index 1
 setw -g pane-base-index 1
+
+# --- term colors ---
+
+set -g default-terminal "screen-256color"
+
