Some misc changes

--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -13,10 +13,12 @@ family = "Mononoki Nerd Font"
 
 [window]
 decorations = "none"
-
-opacity = 0.8
+opacity = 0.9
 blur = true
 
 [window.padding]
 x = 10
 y = 5
+
+[colors.primary]
+background = '#242424'
