--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -22,6 +22,15 @@ bind - split-window -v
 unbind r
 bind r source-file ~/.tmux.conf
 
+# --- bindings ---
+
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 5
+bind -r h resize-pane -L 5
+
+bind -r m resize-pane -Z
+
 # --- mouse in tmux ---
 
 set -g mouse on
@@ -34,6 +43,28 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode after dragging with mouse
+
+# --- vim-tmux-navigator ---
+
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # --- status bar ---
 
@@ -55,3 +86,11 @@ setw -g pane-base-index 1
 
 set -g default-terminal "screen-256color"
 
+# --- tpm plugins ---
+
+# set -g @plugin 'tmux-plugins/tpm' # tpm plugin
+# set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# --- TMUX plugin manager initialization ---
+
+run '~/.tmux/plugins/tpm/tpm'
