--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -45,7 +45,7 @@ inactive_tab_font_style normal
 # foreground #d1d5da
 # background #242424
 background_opacity 0.9
-background_blur 16
+background_blur 32
 
 # BEGIN_KITTY_THEME
 # GitHub Dark
@@ -58,16 +58,22 @@ map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
 map cmd+3 goto_tab 3
 map cmd+4 goto_tab 4
-map cmd+5 goto_tab 6
+map cmd+5 goto_tab 5
+map cmd+6 goto_tab 6
+map cmd+7 goto_tab 7
+map cmd+8 goto_tab 8
+map cmd+9 goto_tab 9
 
 map kitty_mod+enter
 
 # layout Keybindings
 map cmd+shift+\ launch --location=vsplit
 map cmd+shift+- launch --location=hsplit
-map cmd+shift+enter launch --location=split
+map cmd+enter launch --location=split
 
 map cmd+shift+r layout_action rotate
+
+map cmd+shift+enter launch --cwd=current --location=split
 
 map shift+up move_window up
 map shift+left move_window left
