--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -75,28 +75,26 @@ map cmd+shift+r layout_action rotate
 
 map cmd+shift+enter launch --cwd=current --location=split
 
-map shift+up move_window up
-map shift+left move_window left
-map shift+right move_window right
-map shift+down move_window down
+map cmd+shift+up move_window up
+map cmd+shift+left move_window left
+map cmd+shift+right move_window right
+map cmd+shift+down move_window down
 
-map cmd+shift+up layout_action move_to_screen_edge top
-map cmd+shift+left layout_action move_to_screen_edge left
-map cmd+shift+right layout_action move_to_screen_edge right
-map cmd+shift+down layout_action move_to_screen_edge bottom
+# map cmd+shift+up layout_action move_to_screen_edge top
+# map cmd+shift+left layout_action move_to_screen_edge left
+# map cmd+shift+right layout_action move_to_screen_edge right
+# map cmd+shift+down layout_action move_to_screen_edge bottom
 
 # focus window
-map cmd+option+control+shift+h neighboring_window left
-map cmd+option+control+shift+l neighboring_window right
-map cmd+option+control+shift+k neighboring_window up
-map cmd+option+control+shift+j neighboring_window down
+map cmd+h neighboring_window left
+map cmd+l neighboring_window right
+map cmd+k neighboring_window up
+map cmd+j neighboring_window down
 
 # resize window
-map ctrl+left resize_window wider
-map ctrl+right resize_window narrower
-map ctrl+up resize_window taller
-map ctrl+down resize_window shorter
+map cmd+left resize_window wider
+map cmd+right resize_window narrower
+map cmd+up resize_window taller
+map cmd+down resize_window shorter
 # reset all windows in the tab to default sizes
-map ctrl+enter resize_window reset
-
-
+map cmd+0 resize_window reset
