--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # --- fonts ---
 
-font_size 24
+font_size 22
 
 font_family      Mononoki Nerd Font
 bold_font        auto
@@ -30,9 +30,10 @@ enabled_layouts splits
 
 tab_bar_edge top
 tab_bar_style separator
-tab_separator " "
-tab_title_template "{index}"
-tab_bar_margin_width 10.0
+tab_separator "| "
+tab_title_template "{index}: {tab.active_exe} "
+active_tab_title_template "{index}: {tab.active_exe} "
+# tab_bar_margin_width 10.0
 active_tab_foreground   #ddd
 active_tab_background   #0d1117
 active_tab_font_style   bold
