Update keybindings in aerospace and kitty

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -75,10 +75,10 @@ map cmd+shift+r layout_action rotate
 
 map cmd+shift+enter launch --cwd=current --location=split
 
-map cmd+shift+up move_window up
-map cmd+shift+left move_window left
-map cmd+shift+right move_window right
-map cmd+shift+down move_window down
+map cmd+shift+h move_window left
+map cmd+shift+j move_window down
+map cmd+shift+k move_window up
+map cmd+shift+l move_window right
 
 # map cmd+shift+up layout_action move_to_screen_edge top
 # map cmd+shift+left layout_action move_to_screen_edge left
@@ -87,9 +87,9 @@ map cmd+shift+down move_window down
 
 # focus window
 map cmd+h neighboring_window left
-map cmd+l neighboring_window right
-map cmd+k neighboring_window up
 map cmd+j neighboring_window down
+map cmd+k neighboring_window up
+map cmd+l neighboring_window right
 
 # resize window
 map cmd+left resize_window wider
