--- a/dot_config/aerospace/aerospace.toml
+++ b/dot_config/aerospace/aerospace.toml
@@ -109,24 +109,21 @@ alt-j = 'focus down'
 alt-k = 'focus up'
 alt-l = 'focus right'
 
-cmd-shift-h = 'focus-monitor left' 
-cmd-shift-j = 'workspace --wrap-around prev'
-cmd-shift-k = 'workspace --wrap-around next'
-cmd-shift-l = 'focus-monitor right'
-
-cmd-shift-1 = 'focus-monitor 1'
-cmd-shift-2 = 'focus-monitor 2'
+alt-shift-h = 'focus-monitor left' 
+alt-shift-j = 'focus-monitor down'
+alt-shift-k = 'focus-monitor up'
+alt-shift-l = 'focus-monitor right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move
-alt-shift-h = 'move left'
-alt-shift-j = 'move down'
-alt-shift-k = 'move up'
-alt-shift-l = 'move right'
+ctrl-shift-h = 'move left'
+ctrl-shift-j = 'move down'
+ctrl-shift-k = 'move up'
+ctrl-shift-l = 'move right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#resize
 alt-shift-backspace = 'balance-sizes'
-alt-shift-minus = 'resize smart -50'
-alt-shift-equal = 'resize smart +50'
+alt-minus = 'resize smart -50'
+alt-equal = 'resize smart +50'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
 ctrl-1 = 'workspace 1'
