--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -2,7 +2,7 @@
 
 font_size 20
 
-font_family      Mononoki Nerd Font
+font_family      JetBrainsMono Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -22,11 +22,13 @@ detect_urls yes
 
 # --- Window layout ---
 
-hide_window_decorations yes
+hide_window_decorations titlebar-only
 confirm_os_window_close 0
 enabled_layouts splits
 
 # --- Tab bar ---
+
+tab_bar_margin_height 5 5
 
 tab_bar_edge top
 tab_bar_style separator
