Kitty: add window margin width

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -26,6 +26,8 @@ hide_window_decorations titlebar-only
 confirm_os_window_close 0
 enabled_layouts splits
 
+window_margin_width 5
+
 # --- Tab bar ---
 
 tab_bar_margin_height 5 5
