Add some keybinds

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -7,12 +7,15 @@ set -g status-style "fg=#dbdbdb"
 set -g status-bg default
 set -g status-left " "
 set -g status-right " "
+set -g window-status-separator " | "
+set -g display-panes-colour "#ffffff"
 
 # vi for copy mode
 setw -g mode-keys vi
 
 set -g base-index 1
 setw -g pane-base-index 1
+set-window-option -g pane-base-index 1
 
 set -g detach-on-destroy off
 set -g escape-time 10
@@ -21,12 +24,16 @@ set -g set-clipboard on
 set -g status-position top
 set -g history-limit 10000
 
+# Prefix key
+unbind C-b
+set -g prefix C-Space
+
 # Splitting keybinds
 unbind %
-bind | split-window -h
+bind | split-window -h -c "#{pane_current_path}"
 
 unbind '"'
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
 
 # Refreshing tmux conf keybind
 unbind r 
@@ -43,6 +50,13 @@ bind -r Left resize-pane -L 5
 bind -r Down resize-pane -D 5
 bind -r Up resize-pane -U 5
 bind -r Right resize-pane -R 5
+
+unbind Q
+bind Q setw synchronize-panes
+
+# Resize pane to zoom so it occupies the entire screen
+unbind M
+bind -r M resize-pane -Z
 
 # don't exit copy mode when dragging with mouse
 unbind -T copy-mode-vi MouseDragEnd1Pane
