tmux: misc changes

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -2,11 +2,13 @@ set -g default-terminal "tmux-256color"
 set-option -g terminal-overrides ',xterm-256color:RGB'
 set -g mouse on
 
+set -g default-terminal "${TERM}"
+
 # Status bar
 set -g status-style "fg=#dbdbdb"
 set -g status-bg default
 set -g status-left " "
-set -g status-right " "
+set -g status-right "%H:%M "
 set -g window-status-separator " | "
 set -g display-panes-colour "#ffffff"
 
@@ -15,7 +17,7 @@ setw -g mode-keys vi
 
 set -g base-index 1
 setw -g pane-base-index 1
-set-window-option -g pane-base-index 1
+# set-window-option -g pane-base-index 1
 
 set -g detach-on-destroy off
 set -g escape-time 10
@@ -27,6 +29,10 @@ set -g history-limit 10000
 # Prefix key
 unbind C-b
 set -g prefix C-Space
+
+# Copy mode
+unbind v
+bind v copy-mode
 
 # Splitting keybinds
 unbind %
@@ -83,13 +89,28 @@ bind D display-popup -E "\
     fzf --reverse -m --header=kill-session |\
     xargs -I {} tmux kill-session -t {}"
 
-# # Bind 'd' to perform the 'x' action when in choose-tree mode
-# # In other words, this allows you to close sessions with "d" when in the session
-# # navigator "choose-tree" that comes up with prefix+s
-bind -n d if -F '#{==:#{pane_mode},tree-mode}' 'send x' 'send d'
+# Bind 'd' to perform the 'x' action when in choose-tree mode
+# In other words, this allows you to close sessions with "d" when in the session
+# navigator "choose-tree" that comes up with prefix+s
+# bind -n d if -F '#{==:#{pane_mode},tree-mode}' 'send x' 'send d'
 
 # Use 'd' instead of 't' to tag panes that I want to delete
 # bind -n d if -F '#{==:#{pane_mode},tree-mode}' 'send t' 'send d'
 
 # Use 'D' instead of 'X' to delete all tagged panes
-bind -n D if -F '#{==:#{pane_mode},tree-mode}' 'send X' 'send D'
+# bind -n D if -F '#{==:#{pane_mode},tree-mode}' 'send X' 'send D'
+
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect' # Persist tmux sessions after computer restart
+set -g @resurrect-capture-pane-contents 'on'
+# for vim
+# set -g @resurrect-strategy-vim 'session'
+# for neovim
+# set -g @resurrect-strategy-nvim 'session'
+set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions every 15 minutes (5 minutes in my case)
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '5'
+
+run '~/.tmux/plugins/tpm/tpm'
