--- a/dot_config/aerospace/aerospace.toml
+++ b/dot_config/aerospace/aerospace.toml
@@ -109,21 +109,21 @@ alt-j = 'focus down'
 alt-k = 'focus up'
 alt-l = 'focus right'
 
-alt-shift-h = 'focus-monitor left' 
-alt-shift-j = 'focus-monitor down'
-alt-shift-k = 'focus-monitor up'
-alt-shift-l = 'focus-monitor right'
+cmd-shift-h = 'focus-monitor left' 
+cmd-shift-j = 'focus-monitor down'
+cmd-shift-k = 'focus-monitor up'
+cmd-shift-l = 'focus-monitor right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move
-ctrl-shift-h = 'move left'
-ctrl-shift-j = 'move down'
-ctrl-shift-k = 'move up'
-ctrl-shift-l = 'move right'
+alt-shift-h = 'move left'
+alt-shift-j = 'move down'
+alt-shift-k = 'move up'
+alt-shift-l = 'move right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#resize
 alt-shift-backspace = 'balance-sizes'
-alt-minus = 'resize smart -50'
-alt-equal = 'resize smart +50'
+alt-shift-leftSquareBracket = 'resize smart -50'
+alt-shift-rightSquareBracket = 'resize smart +50'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
 ctrl-1 = 'workspace 1'
@@ -148,15 +148,15 @@ alt-e = 'move-node-to-workspace E'
 alt-a = 'move-node-to-workspace A'
 alt-s = 'move-node-to-workspace S'
 
-alt-shift-1 = ['move-node-to-workspace 1', 'workspace 1']
-alt-shift-2 = ['move-node-to-workspace 2', 'workspace 2']
-alt-shift-3 = ['move-node-to-workspace 3', 'workspace 3']
-alt-shift-4 = ['move-node-to-workspace 4', 'workspace 4']
-alt-shift-q = ['move-node-to-workspace Q', 'workspace Q']
-alt-shift-w = ['move-node-to-workspace W', 'workspace W']
-alt-shift-e = ['move-node-to-workspace E', 'workspace E']
-alt-shift-a = ['move-node-to-workspace A', 'workspace A']
-alt-shift-s = ['move-node-to-workspace S', 'workspace S']
+alt-shift-1 = 'move-node-to-workspace --focus-follows-window 1'
+alt-shift-2 = 'move-node-to-workspace --focus-follows-window 2'
+alt-shift-3 = 'move-node-to-workspace --focus-follows-window 3'
+alt-shift-4 = 'move-node-to-workspace --focus-follows-window 4'
+alt-shift-q = 'move-node-to-workspace --focus-follows-window Q'
+alt-shift-w = 'move-node-to-workspace --focus-follows-window W'
+alt-shift-e = 'move-node-to-workspace --focus-follows-window E'
+alt-shift-a = 'move-node-to-workspace --focus-follows-window A'
+alt-shift-s = 'move-node-to-workspace --focus-follows-window S'
 
 alt-shift-f = 'fullscreen'
 alt-f = 'layout floating tiling'
@@ -170,6 +170,7 @@ alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 alt-shift-semicolon = 'mode service'
 
 cmd-h = [] # Disable "hide application"
+cmd-alt-h = [] # Disable "hide others"
 
 # 'service' binding mode declaration.
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -189,4 +190,8 @@ alt-shift-l = ['join-with right', 'mode main']
 
 [[on-window-detected]]
 if.app-id = 'com.apple.finder'
+run = 'layout floating'
+
+[[on-window-detected]]
+if.app-id = 'com.amnezia.AmneziaVPN'
 run = 'layout floating'
