--- a/dot_config/aerospace/aerospace.toml
+++ b/dot_config/aerospace/aerospace.toml
@@ -24,7 +24,7 @@ enable-normalization-opposite-orientation-for-nested-containers = true
 accordion-padding = 10
 
 # Possible values: tiles|accordion
-default-root-container-layout = 'tiles'
+default-root-container-layout = 'accordion'
 
 # Possible values: horizontal|vertical|auto
 # 'auto' means: wide monitor (anything wider than high) gets horizontal orientation,
@@ -101,8 +101,8 @@ outer.right =      5
 # alt-q = 'close-all-windows-but-current'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
-alt-slash = 'layout tiles horizontal vertical'
-alt-comma = 'layout accordion horizontal vertical'
+alt-semicolon = 'layout tiles horizontal vertical'
+alt-slash = 'layout accordion horizontal vertical'
 
 cmd-h = 'focus-monitor left' 
 cmd-j = 'workspace --wrap-around prev'
@@ -164,6 +164,9 @@ alt-shift-s = 'move-node-to-workspace --focus-follows-window 10'
 
 alt-shift-f = 'fullscreen'
 alt-f = 'layout floating tiling'
+
+cmd-alt-f = 'macos-native-fullscreen on'
+cmd-alt-shift-f = 'macos-native-fullscreen off'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
 alt-tab = 'workspace-back-and-forth'
