--- a/dot_config/aerospace/aerospace.toml
+++ b/dot_config/aerospace/aerospace.toml
@@ -1,6 +1,3 @@
-# Place a copy of this config to ~/.aerospace.toml
-# After that, you can edit ~/.aerospace.toml to your liking
-
 # You can use it to add commands that run after login to macOS user session.
 # 'start-at-login' needs to be 'true' for 'after-login-command' to work
 # Available commands: https://nikitabobko.github.io/AeroSpace/commands
@@ -21,10 +18,10 @@ enable-normalization-opposite-orientation-for-nested-containers = true
 # See: https://nikitabobko.github.io/AeroSpace/guide#layouts
 # The 'accordion-padding' specifies the size of accordion padding
 # You can set 0 to disable the padding feature
-accordion-padding = 10
+accordion-padding = 0
 
 # Possible values: tiles|accordion
-default-root-container-layout = 'accordion'
+default-root-container-layout = 'tiles'
 
 # Possible values: horizontal|vertical|auto
 # 'auto' means: wide monitor (anything wider than high) gets horizontal orientation,
@@ -61,13 +58,8 @@ outer.right =      5
 1 = 'main'
 2 = 'main'
 3 = 'main'
-4 = 'main'
-5 = 'main'
-6 = ['secondary', 'built-in']
-7 = ['secondary', 'built-in']
-8 = ['secondary', 'built-in']
-9 = ['secondary', 'built-in']
-10 = ['secondary', 'built-in']
+4 = 'built-in'
+5 = 'built-in'
 
 # 'main' binding mode declaration
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -90,24 +82,21 @@ outer.right =      5
 
 # All possible commands: https://nikitabobko.github.io/AeroSpace/commands
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#exec-and-forget
-# You can uncomment the following lines to open up terminal with alt + enter shortcut (like in i3)
-# alt-enter = '''exec-and-forget osascript -e '
-# tell application "Terminal"
-#     do script
-#     activate
-# end tell'
-# '''
 # alt-q = 'close-all-windows-but-current'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
-alt-semicolon = 'layout tiles horizontal vertical'
-alt-slash = 'layout accordion horizontal vertical'
+alt-slash= 'layout tiles horizontal'
+alt-period = 'layout accordion horizontal'
 
-cmd-h = 'focus-monitor left' 
+cmd-h = 'move-node-to-monitor left' 
 cmd-j = 'workspace --wrap-around prev'
 cmd-k = 'workspace --wrap-around next'
-cmd-l = 'focus-monitor right'
+cmd-l = 'move-node-to-monitor right'
+
+cmd-shift-h = 'focus-monitor left'
+cmd-shift-j = 'focus-monitor down'
+cmd-shift-k = 'focus-monitor up'
+cmd-shift-l = 'focus-monitor right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#focus
 alt-h = 'focus left'
@@ -132,11 +121,6 @@ ctrl-2 = 'workspace 2'
 ctrl-3 = 'workspace 3'
 ctrl-4 = 'workspace 4'
 ctrl-5 = 'workspace 5'
-ctrl-q = 'workspace 6'
-ctrl-w = 'workspace 7'
-ctrl-e = 'workspace 8'
-ctrl-a = 'workspace 9'
-ctrl-s = 'workspace 10'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
 
@@ -145,31 +129,17 @@ alt-2 = 'move-node-to-workspace 2'
 alt-3 = 'move-node-to-workspace 3'
 alt-4 = 'move-node-to-workspace 4'
 alt-5 = 'move-node-to-workspace 5'
-alt-q = 'move-node-to-workspace 6'
-alt-w = 'move-node-to-workspace 7'
-alt-e = 'move-node-to-workspace 8'
-alt-a = 'move-node-to-workspace 9'
-alt-s = 'move-node-to-workspace 10'
 
 alt-shift-1 = 'move-node-to-workspace --focus-follows-window 1'
 alt-shift-2 = 'move-node-to-workspace --focus-follows-window 2'
-alt-shift-3 = 'move-node-to-workspace --focus-follows-window 3'
 alt-shift-4 = 'move-node-to-workspace --focus-follows-window 4'
 alt-shift-5 = 'move-node-to-workspace --focus-follows-window 5'
-alt-shift-q = 'move-node-to-workspace --focus-follows-window 6'
-alt-shift-w = 'move-node-to-workspace --focus-follows-window 7'
-alt-shift-e = 'move-node-to-workspace --focus-follows-window 8'
-alt-shift-a = 'move-node-to-workspace --focus-follows-window 9'
-alt-shift-s = 'move-node-to-workspace --focus-follows-window 10'
 
 alt-shift-f = 'fullscreen'
 alt-f = 'layout floating tiling'
 
-cmd-alt-f = 'macos-native-fullscreen on'
-cmd-alt-shift-f = 'macos-native-fullscreen off'
-
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
-alt-tab = 'workspace-back-and-forth'
+alt-tab = 'focus-back-and-forth'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#mode
 alt-shift-semicolon = 'mode service'
@@ -183,7 +153,7 @@ cmd-alt-h = [] # Disable "hide others"
 esc = ['reload-config', 'mode main']
 r = ['flatten-workspace-tree', 'mode main'] # reset layout
 f = ['layout floating tiling', 'mode main'] # Toggle between floating and tiling layout
-# backspace = ['close-all-windows-but-current', 'mode main']
+backspace = ['close-all-windows-but-current', 'mode main']
 
 # sticky is not yet supported https://github.com/nikitabobko/AeroSpace/issues/2
 #s = ['layout sticky tiling', 'mode main']
@@ -195,12 +165,4 @@ alt-shift-l = ['join-with right', 'mode main']
 
 [[on-window-detected]]
 if.app-id = 'com.apple.finder'
-run = 'layout floating'
-
-[[on-window-detected]]
-if.app-id = 'com.amnezia.AmneziaVPN'
-run = 'layout floating'
-
-[[on-window-detected]]
-if.app-id = 'e.AmneziaVPN'
 run = 'layout floating'
